# hinkbot

./: .env.example  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  hanggame.go  helper.go  main.go  messageHandler.go  settings.toml.default
docker/: Dockerfile
migrations/2018-07-14-112340_create_chats/: up.sql
migrations/2018-07-14-112345_create_users/: up.sql
migrations/2018-07-14-112350_chat_user_stats/: down.sql  up.sql
migrations/2018-07-21-104952_add_users_username/: up.sql
src/: app.rs  main.rs  models.rs  schema.rs  state.rs  stats.rs  util.rs
src/cmd/: handler.rs
src/cmd/action/: all.rs  echo.rs  echohtml.rs  exec.rs  genimi.rs  help.rs  id.rs  mod.rs  ping.rs  retweet.rs  risc.rs  start.rs  stats.rs  test.rs
src/executor/: isolated.rs  mod.rs  normal.rs
src/msg/: handler.rs
