[package]
name = "risc-bot"
version = "0.0.1"
authors = ["timvisee <timvisee@gmail.com>"]

[dependencies]
chrono = "0.4"
colored = "1.6"
diesel = { version = "1.3", features = ["chrono", "mysql"] }
dotenv = "0.13"
failure = "0.1"
futures = "0.1"
humansize = "1.1"
humantime = "1.1"
htmlescape = "0.3"
lazy_static = "1.0"
regex = "1.0"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-process = "0.2"
tokio-signal = "0.2"
tokio-timer = "0.2"

[dependencies.telegram-bot]
git = "https://github.com/telegram-rs/telegram-bot"
version ="*"
default-features = false

[features]
default = ["hyper"]
hyper = ["telegram-bot/hyper_connector"]
curl = ["telegram-bot/curl_connector"]
